# life-ops

./: .gitignore  README.md  orp.academic-outreach.yml  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
config/: cloudflare_mail.example.json  fastmail.example.json  google_credentials.example.json  resend.example.json  x_client.example.json
config/bimi/: _dmarc.frg.earth.txt  default._bimi.frg.earth.txt
docs/: agent-usage.md  apple-calendar.md  bimi-frg-earth.md  calendar.md  daily-weekly-flow.md  emma-integration.md  fastmail-setup.md  google-setup.md  keys.md  profile-context.md  sovereign-email-stack.md  tracing.md  x-content.md  x-integration.md
docs/academic-outreach/: workflow.md
examples/academic-outreach/: bloom.txt  (+2 more)
ops/: com.sproutseeds.lifeops-noon-day-sheet-print.plist.example  com.sproutseeds.lifeops-orp-sweep.plist.example
scripts/: frg_booking_handoff_smoke.py  lifeops_day_sheet_db.sh  noon_day_sheet_print.sh  validate_academic_outreach.py
tests/: test_agenda.py  test_apple_calendar.py  test_calendar.py  test_classification.py  test_cloudflare_email.py  test_cmail_runtime.py  test_credentials.py  test_document_ingest.py  test_emma_integration.py  test_encrypted_store.py  test_fastmail_integration.py  test_mail_ingest.py  test_mail_metadata.py  test_mail_ui.py  test_mail_vault.py  test_orp_sweep.py  test_outreach_validation.py  test_profile_context.py  test_profile_memory.py  test_resend_integration.py  test_social.py  test_sync_store.py  test_tracing.py  test_vault_crypto.py  test_x_content.py  test_x_integration.py
(+31 files in other folders)
